force-app/main/default/objects/Invoice__c/fields/Auto_Advance__c.field-meta.xml
<CustomField>
    <fullName>Auto_Advance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Advance</label>
    <type>Checkbox</type>
</CustomField>