force-app/main/default/objects/Invoice__c/fields/Billing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Reason__c</fullName>
    <label>Billing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>subscription_cycle</fullName>
            </value>
            <value>
                <fullName>subscription_create</fullName>
            </value>
            <value>
                <fullName>subscription_update</fullName>
            </value>
            <value>
                <fullName>subscription</fullName>
            </value>
            <value>
                <fullName>manual</fullName>
            </value>
            <value>
                <fullName>upcoming</fullName>
            </value>
            <value>
                <fullName>subscription_threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>