force-app/main/default/objects/Invoice__c/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <label>Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>charge_automatically</fullName>
            </value>
            <value>
                <fullName>send_invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>