force-app/main/default/objects/Invoice__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>150</length>
    <type>Text</type>
</CustomField>