force-app/main/default/objects/Invoice__c/fields/Hosted_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Invoice_URL__c</fullName>
    <description>Hosted Invoice URL</description>
    <inlineHelpText>customers can view and pay an invoice. If the invoice has not been finalized yet</inlineHelpText>
    <label>Hosted Invoice URL</label>
    <type>Url</type>
</CustomField>