force-app/main/default/objects/Invoice__c/fields/Invoice_Finalized_At__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finalized_At__c</fullName>
    <label>Invoice Finalized At</label>
    <type>DateTime</type>
</CustomField>