force-app/main/default/objects/Invoice__c/fields/Invoice_Marked_Uncollectible_At__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Marked_Uncollectible_At__c</fullName>
    <label>Invoice Marked Uncollectible At</label>
    <type>DateTime</type>
</CustomField>