force-app/main/default/objects/Invoice__c/fields/Invoice_Paid_At__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_At__c</fullName>
    <label>Invoice Paid At</label>
    <type>DateTime</type>
</CustomField>