force-app/main/default/objects/Invoice__c/fields/Invoice_Paid_Out_of_Band__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Out_of_Band__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Paid Out of Band</label>
    <type>Checkbox</type>
</CustomField>