force-app/main/default/objects/Invoice__c/fields/Invoice_Voided_At__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Voided_At__c</fullName>
    <label>Invoice Voided At</label>
    <type>DateTime</type>
</CustomField>