force-app/main/default/objects/Invoice__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <label>Period Start</label>
    <type>DateTime</type>
</CustomField>