force-app/main/default/objects/Invoice__c/fields/Retry_Status__c.field-meta.xml
<CustomField>
    <fullName>Retry_Status__c</fullName>
    <label>Retry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalize Initiated</fullName>
            </value>
            <value>
                <fullName>Pay Initiated</fullName>
            </value>
            <value>
                <fullName>Finalize Completed</fullName>
            </value>
            <value>
                <fullName>Pay Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>