force-app/main/default/objects/Invoice__c/fields/Subtotal_Excluding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Excluding_Tax__c</fullName>
    <label>Subtotal Excluding Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>