force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Attempt_Count__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Amount_Remaining__c</columns>
    <columns>Invoice_Finalized_At__c</columns>
    <columns>Period_End__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>